[package]
name = "sbf2rnx"
version = "0.1.0"
authors = ["Lars Næsbye Christensen <lars@naesbye.dk>"]
edition = "2021"
description = "Converts SBF to RINEX"
rust-version = "1.78"
categories = ["science::geo", "parsing"]

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.4", features = [] }
nom = "7.1.3"
rinex = "0.16.1"
thiserror = "1.0.59"